@@ -117,3 +117,13 @@ function uploadFromGoogleDrive(projectName, sharedUrl, fileName) { // eslint-dis
 function getAppFiles(projectName) { // eslint-disable-line no-unused-vars
   throw new Error('このメソッドは直接呼び出せません。createメソッドで取得したインスタンスより呼び出してください。');
 }
+
+/**
+ * Magic Podにアップロードしたアプリを削除する
+ * @param {string} projectName プロジェクト名
+ * @param {number} fileNo アプリのNo
+ * @return {Object}
+ */
+function deleteAppFile(projectName, fileNo) { // eslint-disable-line no-unused-vars
+  throw new Error('このメソッドは直接呼び出せません。createメソッドで取得したインスタンスより呼び出してください。');
+}
